WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
143394
Fix the firing of the ReachedSessionRestorationRenderTreeSizeThreshold milestone on iOS
https://bugs.webkit.org/show_bug.cgi?id=143394
Summary
Fix the firing of the ReachedSessionRestorationRenderTreeSizeThreshold milest...
Simon Fraser (smfr)
Reported
2015-04-03 16:51:28 PDT
Fix the firing of the ReachedSessionRestorationRenderTreeSizeThreshold milestone on iOS
Attachments
Patch
(1.78 KB, patch)
2015-04-03 16:52 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-04-03 16:52:06 PDT
Created
attachment 250106
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-03 17:42:57 PDT
Comment on
attachment 250106
[details]
Patch Clearing flags on attachment: 250106 Committed
r182340
: <
http://trac.webkit.org/changeset/182340
>
WebKit Commit Bot
Comment 3
2015-04-03 17:43:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug