Fix the firing of the ReachedSessionRestorationRenderTreeSizeThreshold milestone on iOS https://bugs.webkit.org/show_bug.cgi?id=143394

Reviewed by Tim Horton.

A client reshuffle at some point broke the dispatch of the ReachedSessionRestorationRenderTreeSizeThreshold
milestone. Fix by using WebPageProxy::didLayout() to fire the milestone.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::didCommitLayerTree):


Canonical link: https://commits.webkit.org/161432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182340 268f45cc-cd09-0410-ab3c-d52691b4dbfc